--- a/homepage.css
+++ b/homepage.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Helvetica, Arial, sans-serif;
   color:#616161;
@@ -9,7 +8,6 @@ body {
 }
 
 #header {
-  position: fixed;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -58,8 +56,8 @@ a {
 }
 
 #welcome {
-  padding-top: 120px;
-  padding-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -188,4 +186,42 @@ button{
   padding: 0px;
 }
 
+@media (max-width: 938px) {
+  
+  #nav-bar ul {
+  list-style: none;
+  margin: 0;
+  margin-right: 50px;
+  padding-top: 85px;
+}
 
+
+#nav-bar li {
+  display: inline-block;
+  padding: 0px 40px;
+  min-width: 50px;
+}
+
+#footer {
+  text-align: center;
+  background-color: #FF80AB;
+  padding: 20px;
+  margin-top: 30px;
+}
+  
+#footer li {
+  display: inline-block;
+  padding: 0 9px;
+  margin: 0;
+  margin-right: 50px;
+  font-size: 16px;
+  max-width: 40px
+}
+  
+.footer-paragraph {
+  font-size: 13px;
+  margin: 0;
+  padding: 0px;
+}
+
+}
